# aoc-2024-rust

./: .woodpecker.yml  Cargo.toml  README.md
.forgejo/workflows/: ci.yml  readme-stars.yml
