[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Joshua Corley"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Build Dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
arrayvec = { version = "0.7" }
derive_more = { version = "2", features = ["full"] }
itertools = { version = "0.14" }
nalgebra = { version = "0.34" }
pathfinding = { version = "4.14" }
rayon = { version = "1.11" }
rustc-hash = { version = "2.1" }
smallvec = { version = "1.15" }
strum = { version = "0.27", features = ["derive"] }
